k3s/apps/waha/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waha
  namespace: apps
spec:
  selector:
    app: waha
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
