k3s/apps/waha/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waha
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: waha.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: waha
                port:
                  name: http
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.194
